added logo in header

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="This is a local shop for all types of book available for rent"
     />
+    <link rel="stylesheet" href="style.css">
     <title>Kitab</title>
   </head>
   <body>
